--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -6,4 +6,9 @@
     android:layout_height="match_parent"
     tools:context="com.dropthebit.dropthebit.ui.detail.DetailActivity">
 
+    <com.github.mikephil.charting.charts.LineChart
+        android:id="@+id/chart"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        />
 </android.support.constraint.ConstraintLayout>
