--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -10,7 +10,7 @@
         android:id="@+id/button_buy"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="매수"
+        android:text="@string/buying"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/button_sell"
         app:layout_constraintTop_toTopOf="parent"/>
@@ -19,7 +19,7 @@
         android:id="@+id/button_sell"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="매도"
+        android:text="@string/selling"
         app:layout_constraintLeft_toRightOf="@id/button_buy"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
