--- a/app/src/main/res/layout/dialog_transaction.xml
+++ b/app/src/main/res/layout/dialog_transaction.xml
@@ -79,7 +79,7 @@
         android:layout_marginEnd="15dp"
         android:layout_marginStart="15dp"
         android:layout_marginTop="5dp"
-        android:inputType="number"
+        android:inputType="numberDecimal"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/text_symbol"
         app:layout_constraintTop_toBottomOf="@id/text_amount" />
@@ -117,6 +117,7 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="5dp"
         android:inputType="number"
+        android:maxLength="18"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/text_won"
         app:layout_constraintTop_toBottomOf="@id/text_predict" />
