--- a/app/src/main/res/layout/dialog_transaction.xml
+++ b/app/src/main/res/layout/dialog_transaction.xml
@@ -80,6 +80,7 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="5dp"
         android:inputType="numberDecimal"
+        android:text="0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/text_symbol"
         app:layout_constraintTop_toBottomOf="@id/text_amount" />
@@ -116,8 +117,10 @@
         android:layout_marginEnd="15dp"
         android:layout_marginStart="15dp"
         android:layout_marginTop="5dp"
+        android:digits="0123456789,"
         android:inputType="number"
         android:maxLength="18"
+        android:text="0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/text_won"
         app:layout_constraintTop_toBottomOf="@id/text_predict" />
@@ -158,9 +161,9 @@
 
     <ProgressBar
         android:id="@+id/progress_time"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/text_time_help" />
