--- a/app/src/main/res/layout/dialog_transaction.xml
+++ b/app/src/main/res/layout/dialog_transaction.xml
@@ -99,16 +99,25 @@
         tools:text="BTC" />
 
     <TextView
+        android:id="@+id/text_hold"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="@id/edit_amount"
+        app:layout_constraintRight_toRightOf="@id/edit_amount"
+        app:layout_constraintTop_toBottomOf="@id/edit_amount"
+        tools:text="@string/hold_amount_text" />
+
+    <TextView
         android:id="@+id/text_predict"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="5dp"
         android:text="예상금액"
         android:textColor="#888"
         android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edit_amount" />
+        app:layout_constraintTop_toBottomOf="@id/text_hold" />
 
     <EditText
         android:id="@+id/edit_predict_price"
@@ -139,16 +148,25 @@
         app:layout_constraintRight_toRightOf="parent" />
 
     <TextView
+        android:id="@+id/text_krw"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="@id/edit_predict_price"
+        app:layout_constraintRight_toRightOf="@id/edit_predict_price"
+        app:layout_constraintTop_toBottomOf="@id/edit_predict_price"
+        tools:text="@string/hold_krw_text" />
+
+    <TextView
         android:id="@+id/text_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="5dp"
         android:textColor="#000"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edit_predict_price"
+        app:layout_constraintTop_toBottomOf="@id/text_krw"
         tools:text="2.1초" />
 
     <TextView
