--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#191919</color>
+    <color name="colorPrimaryDark">#000</color>
+    <color name="colorAccent">#ffe150</color>
+
+    <color name="app_black">#191919</color>
+    <color name="app_light_gray">#acacac</color>
+    <color name="app_yellow">#ffe150</color>
+    <color name="app_gray">#757575</color>
 </resources>
