--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="app_light_gray">#acacac</color>
     <color name="app_yellow">#ffe150</color>
     <color name="app_gray">#757575</color>
+    <color name="app_blue">#258ee9</color>
+    <color name="app_red">#e94d25</color>
 </resources>
