--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,8 +44,21 @@
             app:layout_constraintLeft_toLeftOf="@id/text_activity_title"
             app:layout_constraintTop_toTopOf="@id/text_activity_title" />
 
+        <TextView
+            android:id="@+id/button_toggle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="21dp"
+            android:background="?attr/selectableItemBackground"
+            android:padding="2.5dp"
+            android:text="전환"
+            android:textColor="#FFF"
+            app:layout_constraintBottom_toBottomOf="@id/text_activity_title"
+            app:layout_constraintRight_toRightOf="@id/text_activity_title"
+            app:layout_constraintTop_toTopOf="@id/text_activity_title" />
+
         <View
-            android:id="@+id/guide_view_pager"
+            android:id="@+id/guide_fragment"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginBottom="40dp"
@@ -53,30 +66,14 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/view_pager"
+        <FrameLayout
+            android:id="@+id/container_fragment"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:overScrollMode="never"
-            app:layout_constraintBottom_toTopOf="@+id/tab_layout"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/guide_view_pager" />
-
-        <android.support.design.widget.TabLayout
-            android:id="@+id/tab_layout"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="1dp"
-            android:background="#000"
-            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@id/tab_layout" />
+            app:layout_constraintTop_toBottomOf="@id/guide_fragment" />
     </android.support.constraint.ConstraintLayout>
 </android.support.design.widget.CoordinatorLayout>
